# ConfusingC--

./: CMakeLists.txt  readme.md  staticVdynamic.md
include/: commands.h  dispatcher.h  executor.h  parser.h
src/: commands.cpp  dispatcher.cpp  executor.cpp  main.cpp  parser.cpp
